// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A Text component resized 1`] = `
.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  font-size: 2.875rem;
  font-weight: 400;
  line-height: 4rem;
}

.c0 {
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  text-transform: none;
  text-align: left;
  color: #262D33;
}

<span
  className="c0 c1"
>
  Hello
</span>
`;

exports[`A Text component text transformed 1`] = `
.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5rem;
}

.c0 {
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  text-transform: uppercase;
  text-align: left;
  color: #262D33;
}

<span
  className="c0 c1"
>
  Hello
</span>
`;

exports[`A Text component weight 1`] = `
.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  font-size: 1rem;
  font-weight: 700;
  line-height: 1.5rem;
}

.c0 {
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  text-transform: none;
  text-align: left;
  color: #262D33;
}

<span
  className="c0 c1"
>
  Hello
</span>
`;

exports[`A Text component with variant 1`] = `
.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5rem;
}

.c0 {
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  text-transform: none;
  text-align: left;
  color: #CC1F36;
}

<span
  className="c0 c1"
>
  Hello
</span>
`;

exports[`A Text component wrapped 1`] = `
.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5rem;
}

.c0 {
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  text-transform: none;
  text-align: left;
  overflow-wrap: break-word;
  color: #262D33;
}

<span
  className="c0 c1"
>
  Hello
</span>
`;

exports[`A default Text component 1`] = `
.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5rem;
}

.c0 {
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  text-transform: none;
  text-align: left;
  color: #262D33;
}

<span
  className="c0 c1"
>
  Hello
</span>
`;
